--- a/src/lang/basque.txt
+++ b/src/lang/basque.txt
@@ -3393,6 +3393,7 @@ STR_PURCHASE_INFO_RUNNINGCOST                                   :{BLACK}Mantenim
 STR_PURCHASE_INFO_CAPACITY                                      :{BLACK}Edukiera: {GOLD}{CARGO_LONG} {STRING}
 STR_PURCHASE_INFO_REFITTABLE                                    :(zama aldatu daiteke)
 STR_PURCHASE_INFO_DESIGNED_LIFE                                 :{BLACK}Diseinatua: {GOLD}{NUM}{BLACK} Bizitza: {GOLD}{COMMA} urte
+STR_PURCHASE_INFO_DESIGNED                                      :{BLACK}Diseinatua: {GOLD}{NUM}
 STR_PURCHASE_INFO_RELIABILITY                                   :{BLACK}Gehienezko fidagarritasuna: %{GOLD}{COMMA}
 STR_PURCHASE_INFO_COST                                          :{BLACK}Kostea: {GOLD}{CURRENCY_LONG}
 STR_PURCHASE_INFO_WEIGHT_CWEIGHT                                :{BLACK}Pisua: {GOLD}{WEIGHT_SHORT} ({WEIGHT_SHORT})
