--- a/src/lang/frisian.txt
+++ b/src/lang/frisian.txt
@@ -3234,6 +3234,7 @@ STR_PURCHASE_INFO_RUNNINGCOST                                   :{BLACK}Underhâ
 STR_PURCHASE_INFO_CAPACITY                                      :{BLACK}Kapasiteit: {GOLD}{CARGO_LONG} {STRING}
 STR_PURCHASE_INFO_REFITTABLE                                    :(kin omboud wurde)
 STR_PURCHASE_INFO_DESIGNED_LIFE                                 :{BLACK}Ûntwurpen: {GOLD}{NUM}{BLACK} Libbensdoer: {GOLD}{COMMA} jier
+STR_PURCHASE_INFO_DESIGNED                                      :{BLACK}Ûntwurpen: {GOLD}{NUM}
 STR_PURCHASE_INFO_RELIABILITY                                   :{BLACK}Maks. Betrouberens: {GOLD}{COMMA}%
 STR_PURCHASE_INFO_COST                                          :{BLACK}Kosten: {GOLD}{CURRENCY_LONG}
 STR_PURCHASE_INFO_WEIGHT_CWEIGHT                                :{BLACK}Gewicht: {GOLD}{WEIGHT_SHORT} ({WEIGHT_SHORT})
