--- a/src/lang/gaelic.txt
+++ b/src/lang/gaelic.txt
@@ -3770,6 +3770,7 @@ STR_PURCHASE_INFO_RUNNINGCOST                                   :{BLACK}Cosgaise
 STR_PURCHASE_INFO_CAPACITY                                      :{BLACK}Tomhas-lìonaidh: {GOLD}{CARGO_LONG} {STRING}
 STR_PURCHASE_INFO_REFITTABLE                                    :(gabhaidh mùthadh)
 STR_PURCHASE_INFO_DESIGNED_LIFE                                 :{BLACK}Air a dhealbhadh: {GOLD}{NUM}{BLACK} Beatha: {GOLD}{COMMA} bliadhna
+STR_PURCHASE_INFO_DESIGNED                                      :{BLACK}Air a dhealbhadh: {GOLD}{NUM}
 STR_PURCHASE_INFO_RELIABILITY                                   :{BLACK}Earbsachd as motha: {GOLD}{COMMA}%
 STR_PURCHASE_INFO_COST                                          :{BLACK}Cosgais: {GOLD}{CURRENCY_LONG}
 STR_PURCHASE_INFO_WEIGHT_CWEIGHT                                :{BLACK}Cuideam: {GOLD}{WEIGHT_SHORT} ({WEIGHT_SHORT})
