--- a/src/lang/slovenian.txt
+++ b/src/lang/slovenian.txt
@@ -3660,6 +3660,7 @@ STR_PURCHASE_INFO_RUNNINGCOST                                   :{BLACK}Cena del
 STR_PURCHASE_INFO_CAPACITY                                      :{BLACK}Zmogljivost: {GOLD}{CARGO_LONG} {STRING}
 STR_PURCHASE_INFO_REFITTABLE                                    :(spremenljivo)
 STR_PURCHASE_INFO_DESIGNED_LIFE                                 :{BLACK}Zasnova: {GOLD}{NUM}{BLACK} Življ. doba: {GOLD}{COMMA} let{P o i a ""}
+STR_PURCHASE_INFO_DESIGNED                                      :{BLACK}Zasnova: {GOLD}{NUM}
 STR_PURCHASE_INFO_RELIABILITY                                   :{BLACK}Max. zanesljivost: {GOLD}{COMMA}%
 STR_PURCHASE_INFO_COST                                          :{BLACK}Cena: {GOLD}{CURRENCY_LONG}
 STR_PURCHASE_INFO_WEIGHT_CWEIGHT                                :{BLACK}Teža: {GOLD}{WEIGHT_SHORT} ({WEIGHT_SHORT})
