--- a/src/lang/welsh.txt
+++ b/src/lang/welsh.txt
@@ -3509,6 +3509,7 @@ STR_PURCHASE_INFO_RUNNINGCOST                                   :{BLACK}Cost Rhe
 STR_PURCHASE_INFO_CAPACITY                                      :{BLACK}Gallu cludo: {GOLD}{CARGO_LONG} {STRING}
 STR_PURCHASE_INFO_REFITTABLE                                    :(gallu ailffitio)
 STR_PURCHASE_INFO_DESIGNED_LIFE                                 :{BLACK}Cynlluniwyd: {GOLD}{NUM}{BLACK} Bywyd: {GOLD}{COMMA} mlynedd
+STR_PURCHASE_INFO_DESIGNED                                      :{BLACK}Cynlluniwyd: {GOLD}{NUM}
 STR_PURCHASE_INFO_RELIABILITY                                   :{BLACK}Dibynadwyedd Uchaf: {GOLD}{COMMA}%
 STR_PURCHASE_INFO_COST                                          :{BLACK}Cost: {GOLD}{CURRENCY_LONG}
 STR_PURCHASE_INFO_WEIGHT_CWEIGHT                                :{BLACK}Pwysau: {GOLD}{WEIGHT_SHORT} ({WEIGHT_SHORT})
