--- a/src/lang/english.txt
+++ b/src/lang/english.txt
@@ -7211,6 +7211,7 @@ STR_TMPL_TEMPLATE_OVR_RUNNING_COST                              :{BLACK}Estimate
 STR_TMPL_TEMPLATE_OVR_MULTIPLE                                  :{BLACK}{STRING1}{BLACK} {STRING1}
 STR_TMPL_WARNING_FREE_WAGON                                     :{RED}Free Chain: not runnable!
 STR_TMPL_WARNING_VEH_UNAVAILABLE                                :{RED}Train not buildable: vehicle unavailable!
+STR_TMPL_WARNING_VEH_NO_COMPATIBLE_RAIL_TYPE                    :{RED}Train not buildable: chain not compatible with any rail type
 STR_TMPL_GROUP_USES_TEMPLATE                                    :{BLACK}Template in use: {NUM}
 STR_TMP_TEMPLATE_IN_USE                                         :Template is in use
 STR_TMP_TEMPLATE_FROM_PARENT_GROUP                              :Using template from parent group
